admin/webUI/assets/css/custom.css
/*MDL DESIGN REWRITE*/

.mdl-layout-title {
  color: #EC3D2E;
}

.mdl-layout__header-row .mdl-navigation__link {
  cursor: pointer;
  min-width: 50px;
  padding: 0 10px;
  color: black;
}

.mdl-layout__header-row .mdl-navigation__link:hover,
.dropdown-wrapper:hover .mdl-navigation__link {
  box-shadow: inset 0 -3px 0 0 #EC3D2E;
  color: #EC3D2E;
}

.mdl-layout-title {
  font-weight: bold;
}

.mdl-layout__container .mdl-layout__header {
  background: white;
  position: relative;
}

.mdl-layout__header .mdl-layout__drawer-button {
  color: black;
}

.mdl-layout__header .mdl-layout__drawer-button i {
  margin-top: -10px;
}

.mdl-list__item-primary-content {
  color: black;
}

.mdl-grid.no-pad {
  padding: 0;
}

.mdl-grid.no-margin-lr .mdl-cell {
  margin: 10px 0;
}

.ng-cloak {
  display: none;
}

button.btn-lg {
  min-width: 201px;
}

.mdl-layout__drawer .mdl-navigation .mdl-navigation__link:hover {
  background-color: #EC3D2E;
  color: white;
}

.mdl-button.btn-red {
  background: red;
}

.mdl-button.action-btn {
  min-width: 100px;
  margin-right: 15px;
  color: white;
}

.mdl-button:focus:not(:active) {
  background-color: #E91E63;
}

.mdl-button:hover,
.action-btn:hover {
  background-color: rgba(255, 101, 69, 1.00);
  color: white;
}

.mdl-grid.standard-size {
  width: 90%;
}

.mdl-radio__inner-circle {
  background: #EC3D2E;
}

.mdl-checkbox.is-checked .mdl-checkbox__tick-outline {
  background: rgb(236, 61, 46)url("data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgi…sZT0iZmlsbDojZmZmZmZmO2ZpbGwtb3BhY2l0eToxO3N0cm9rZTpub25lIiAvPgo8L3N2Zz4K");
}

.mdl-checkbox.is-checked .mdl-checkbox__box-outline {
  border: 2px solid RGB(236, 61, 46);
}

.mdl-card {
  width: 100%;
}

.mdl-card__title {
  height: 140px;
  color: #EC3D2E;
}

.mdl-textfield {
  width: 100%;
}

.mdl-textfield__input:focus {
  outline: 0;
}

.mdl-tabs__tab-bar {
  justify-content: flex-start;
}

.material-icons {
  vertical-align: middle;
}

.mdl-button {
  height: 42px;
  background: #F44336;
  color: white;
}

.mdl-button.btn {
  margin-top: 20px;
}

.mdl-button:hover {
  background-color: #E91E63;
}

.mdl-button .material-icons {
  vertical-align: sub;
  font-size: 20px;
}

.mdl-chip.danger-chip:hover {
  background: #F44336;
}

.mdl-chip.danger-chip {
  background: #FF5722;
  color: white;
}

.mdl-chip.white-chip {
  background: white;
  border: 1px solid #F44336;
}

.slide-link.is-active .mdl-chip {
  background: white;
  color: black;
}

.mdl-checkbox {
  height: inherit;
}

.mdl-success.is-checked .mdl-checkbox__tick-outline {
  background: green;
}

.mdl-success.is-checked .mdl-checkbox__box-outline {
  border: 2px solid green;
}

.mdl-success.is-checked .mdl-checkbox__label {
  color: green;
}

.mdl-button[disabled][disabled],
.mdl-button.mdl-button--disabled.mdl-button--disabled {
  border: 1px solid #9E9E9E;
}

.mdl-cell.no-margin-lr {
  margin-left: 0;
  margin-right: 0;
}


/* So that top bar takes up less space.*/

.reduce-height {
  min-height: 40px;
}

.reduce-height .mdl-layout__header-row {
  height: 40px;
}

.reduce-height .mdl-navigation__link {
  line-height: 40px;
}

.mdl-grid {
  padding-top: 0px;
}

.qn-page {
  margin-top: 0px;
}

.option {
  margin-top: 4px;
  margin-bottom: 4px;
}

.option p {
  margin-top: 5px;
  margin-bottom: 5px;
}


/*HOME PAGE*/

body.home {
  background: url("../img/home-cover.jpg") no-repeat;
  background-size: cover;
}

.mdl-card__actions .mdl-button {
  width: 49%;
  background: #607D8B;
}

.mdl-card__actions .mdl-button:hover {
  background: #FF5722;
}

.home-grid {
  padding: 100px 0 50px;
}

.panel-card {
  margin-left: 30px;
}


/*CANDIDATE*/

.candidate .question {
  background: rgba(212, 213, 213, 0.26);
  padding: 22px 10px 1px;
  border-radius: 5px;
}


/*QUESTION PAGE CSS*/

.question-cover.mdl-card__title {
  background: url("../img/question-cover.png");
  background-size: 100% 100%;
}

.tag-filter {
  display: inline-block;
  min-width: 40px;
  padding: 7px 7px;
  margin-right: 7px;
  margin-bottom: 10px;
  border: 1px solid #009688;
  border-radius: 22px;
  text-align: center;
  font-size: 13px;
  cursor: pointer;
}

.tag-filter:not(.selected-filter):hover {
  background-color: #dedede;
}

.option-filter {
  border: 1px solid #2196F3;
}

.selected-filter {
  background: #009688;
  color: white;
}

.selected-filter.option-filter {
  background: #2196F3;
}

.tag-filter .mdl-select.select2-container {
  padding-top: 0;
}

.typesearch {
  position: relative;
}

.typesearch-container {
  position: absolute;
  width: 100%;
  background: white;
  z-index: 1;
}

.tag-item {
  padding: 9px 10px;
  border-bottom: 1px solid #e0e0e0;
  cursor: pointer;
}

.tag-item:hover {
  background: #EC3D2E;
  color: white;
}

.question-form .mdl-checkbox.is-checked .mdl-checkbox__label {
  color: #4CB973;
}

.select2-container {
  width: 100% !Important;
}

.mdl-select.select2-container {
  padding-top: 20px;
}

.mdl-select.select2-container .select2-choices {
  border: none;
  border-bottom: 1px solid rgba(0, 0, 0, .12);
  background-image: none;
}

.mdl-select.select2-container .select2-choices .select2-search-field input {
  font-size: 16px;
  font-family: 'Montserrat', sans-serif;
  color: rgba(0, 0, 0, .26);
}

.mdl-select.select2-container .select2-choices .select2-search-choice {
  line-height: 20px;
  background-color: initial;
  background-image: none;
  border-color: black;
  color: black;
}

.mdl-select.select2-container .select2-search-choice-close {
  left: 3px;
  top: 53%;
  transform: translateY(-50%);
}

.mdl-select.select2-container.select2-container-active .select2-choices,
.mdl-select .select2-drop-active {
  border: 1px solid #EC3D2E;
}

.mdl-select .select2-drop-active {
  border-top: none;
}

.mdl-select .select2-results .select2-highlighted {
  background: #EC3D2E;
}

.ui-select-multiple input.ui-select-search:not(.ng-touched) {
  width: 100% !important;
  position: absolute;
}

.question-action {
  min-width: 100px;
  line-height: 42px;
}


/*So that the question name column and the question description doesn't scroll together*/

.qn-nav {
  height: 100vh;
  overflow-y: scroll;
}

.qn-nav .no-item {
  padding-bottom: 200px;
}

.qn-desc {
  height: 100vh;
  overflow-y: auto;
  padding-right: 30px;
  padding-bottom: 200px;
}


/*QUIZ PAGE CSS*/

.duration-inputs .mdl-textfield {
  width: 32%;
}

.quiz-cover.mdl-card__title {
  background: url("../img/quiz-cover.png");
  background-size: 100% 100%;
}

.alert {
  padding: 10px 10px;
  margin-bottom: 10px;
  color: white;
}

.alert-info {
  background: #019CFC;
}

.alert-success {
  background: #009688;
}

.mdl-button--fab {
  font-size: 14px;
  color: white;
}

.mdl-button--fab.mdl-button--small-fab {
  height: 34px;
  min-width: 34px;
  width: 34px;
}

.quiz-questions.mdl-chip {
  height: inherit;
}

.quiz-questions.mdl-chip .mdl-chip__text {
  white-space: normal;
}

.clickable-hover:hover {
  background: rgba(213, 214, 214, 0.42);
  cursor: pointer;
}

.option-icon i {
  margin-top: -5px;
}


/* CODEMIRROR*/

#question-panel .CodeMirror {
  border-bottom: 1px solid black;
  min-height: 380px;
}

.options-panel .CodeMirror {
  min-height: 57px;
  height: auto;
  border: 1px solid gray;
}

#preview-panel {
  min-height: 380px;
  border-left: 30px solid #DDDDDD;
  padding-left: 10px;
  padding-top: 10px;
}


/*QUIZ TAKING */

.mdl-chip__contact {
  width: inherit;
  padding: 0 15px;
  font-size: 15px;
}

.timer-chip-text {
  width: 84px;
}

.mdl-chip--contact .mdl-chip__text {
  min-width: 40px;
  font-size: 16px;
}

.quiz-ended {
  position: fixed;
  width: 80%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.quiz-ended .pull-right {
  float: none;
}

.quiz-ended .mdl-chip__contact {
  font-size: 20px;
}

.quiz-ended .text-center {
  text-align: left;
}

.candidate .options pre {
  display: block;
  padding-left: 10px !important;
}

.candidate .options label {
  width: 100%;
}

.candidate .options pre {
  padding-top: 0px;
}

.candidate .options p {
  margin-bottom: 0px;
}


/*.candidate-quiz-page .mdl-layout__header,
.candidate-quiz-page .mdl-layout__header-row {
  height: 50px;
  min-height: 50px;
  line-height: 50px;
}
*/


/* Question listing page */

.question-listing form {
  margin-right: 15px;
}


/*INVITE PAGE*/

.select2-container .select2-choice {
  padding: 8px;
  background-image: none;
}

.select2-dropdown-open .select2-choice {
  background: white;
}

.select2-container .select2-choice .select2-arrow {
  background: white;
  background-image: none;
}

.select2-container .select2-choice .select2-arrow b {
  background-position: 0 10px;
}

.select2-dropdown-open .select2-choice .select2-arrow b {
  background-position: -18px 10px;
}

.mdl-dialog__content {
  padding: 20px 10px 0 10px;
}

.mdl-dialog__title {
  padding: 24px 10px 0;
  font-size: 2rem;
}

.report-viewed a {
  text-decoration: none;
  color: #673AB7;
}

.report-viewed {
  background: #009688;
}


/*CANDIDATE REPORT*/

.report-header {
  background: #e0e0e0;
}

.question-heading {
  background: #3F51B5;
  color: white;
  margin-top: 10px;
}

.mdl-chip-info .mdl-chip__text {
  min-width: 120px;
}

.mdl-chip-info .mdl-chip__contact {
  padding: 0 4px;
}

.sticky-sidebar {
  width: calc(25% - 16px);
}

.sticky-sidebar .sticky-sidebar-content {
  position: absolute;
  width: 100%;
  height: 100vh;
  overflow-y: auto;
  background: #f5f7f9;
}

.sticky-sidebar .selected-sidebar {
  background: #3F51B5;
  color: white;
}

.sticky-sidebar-link {
  cursor: pointer;
}

.sticky-sidebar-link:not(.selected-sidebar):hover {
  background: rgba(213, 214, 214, 0.3);
}

.cmdl-chip-value {
  height: 32px;
  line-height: 32px;
  vertical-align: middle;
  padding: 0 20px;
  border: 1px solid #DEDEDE;
  border-radius: 16px;
  margin-left: -38px;
  background: white;
  margin-top: 8px;
}

.path {
  stroke-dasharray: 188;
  stroke-dashoffset: 0;
  stroke: rgba(128, 128, 128, 0.56);
  transform-origin: center;
}

circle.path.prograss-circle {
  display: none;
  stroke: #009688;
  stroke-dashoffset: 184;
  transition: 2s;
}

.scroll-top {
  height: 53px;
  position: fixed;
  bottom: 0;
  right: 20px;
  transform: translateY(100%);
  transition: .2s;
}

.scroll-top.scrollTop-active {
  transform: translateY(-40px);
}


/*TABLET + MOBILE SPECIFIC CSS*/

@media (max-width: 839px) {
  html,
  body {
    font-size: 13px;
  }
  .resp-center {
    text-align: center;
  }
  .report-page.mr-100 {
    margin-right: 0;
  }
  svg#total_score {
    width: 140px;
    height: 140px;
  }
  .mdl-chip-info .cmdl-chip-value {
    padding: 0 10px;
  }
  /*QUIZ LANDING*/
  .landing-grid .lc-border {
    border-top: 1px solid #FF5722;
    border-left: none;
  }
  .landing-grid h4 {
    margin: 0;
  }
  .landing-grid .info-section {
    padding-top: 10px;
  }
  /*QUIZ PAGE*/
  .question-stats .mdl-grid {
    display: inline-block;
    width: 32%;
    text-align: center;
  }
  .quiz-ended {
    width: 90%;
  }
  .quiz-ended .time-stats {
    width: 100%;
    text-align: center;
  }
  .quiz-ended .mdl-textfield__label {
    white-space: normal;
  }
  .quiz-stats {
    width: 330px;
  }
  .quiz-stats > .mdl-cell {
    text-align: left;
  }
}


/*MOBILE SPECIFIC CSS*/

@media (max-width: 480px) {
  html,
  body {
    font-size: 12px;
  }
  .cmdl-chip-value {
    margin-left: 0;
    margin-top: 0;
    display: block;
  }
  .mdl-chip-info .mdl-chip__text {
    min-width: 40px;
    font-size: 14px;
  }
  .mdl-layout__header-row {
    padding: 0;
  }
  .mdl-layout-title {
    display: block;
    width: 100%;
    text-align: center
  }
  .ph-center {
    text-align: center;
  }
  .ph-block {
    display: block
  }
  /*PAGE SPECIFIC*/
  .quiz-score.text-right,
  .time-stats.text-center {
    text-align: left;
  }
}

